# whisper-valet

./: .gitignore  01_clean.sh  02_diarize.sh  CHANGELOG.md  LICENSE  README.md  config.example.env  pyproject.toml  setup.sh  watcher.sh
.github/workflows/: ci.yml
assets/: demo-video-source.html  launch-card-source.js  launch-card.html
launchd/: com.whispervalet.watcher.plist.template
lib/: diarize_merge.py  merge_diarization.py  process_file.sh
src/whisper_valet/: __init__.py  config.py  server.py
tests/: test_config.py  test_merge.py  test_server.py
