[project]
name = "whisper-valet"
version = "0.1.0"
description = "Drop-folder + MCP audio pipeline for macOS: Demucs voice isolation, MacWhisper CLI transcription, pyannote speaker diarization — cleaned audio and speaker-labeled transcripts per clip."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

keywords = ["mcp", "audio", "transcription", "diarization", "macwhisper", "demucs", "pyannote", "macos"]
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["mcp[cli]>=1.2,<2"]

[project.scripts]
whisper-valet-mcp = "whisper_valet.server:main"

[project.urls]
Repository = "https://github.com/yashkotha/whisper-valet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_valet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
